--- a/app.json
+++ b/app.json
@@ -19,13 +19,14 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "buildNumber":"1.0.0"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/rendv_images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#91cfc1"
+      },"versionCode":1
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
