--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/material-top-tabs": "^5.3.15",
@@ -22,22 +23,28 @@
     "@react-navigation/stack": "~5.12.8",
     "expo": "~41.0.1",
     "expo-asset": "~8.3.1",
+    "expo-camera": "~11.0.2",
     "expo-constants": "~10.1.3",
     "expo-contacts": "~9.1.2",
     "expo-font": "~9.1.0",
+    "expo-image-picker": "~10.1.4",
     "expo-linear-gradient": "~9.1.0",
     "expo-linking": "~2.2.3",
+    "expo-permissions": "~12.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.1.0",
+    "luxon": "^1.27.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-calendars": "^1.1262.0",
+    "react-native-calendars": "1.1262.0",
     "react-native-cli": "^2.0.1",
     "react-native-contacts": "^7.0.0",
     "react-native-elements": "^3.4.1",
+    "react-native-emoji-selector": "^0.2.0",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "~2.1.0",
