--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-camera": "~11.0.2",
     "expo-constants": "~10.1.3",
     "expo-contacts": "~9.1.2",
+    "expo-firebase-recaptcha": "^1.4.2",
     "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.4",
     "expo-linear-gradient": "~9.1.0",
@@ -34,11 +35,15 @@
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.1.0",
-    "luxon": "^1.27.0",
+    "firebase": "8.2.3",
+    "glob": "^7.2.0",
+    "luxon": "^2.0.2",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-firebase-hooks": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-actions-sheet": "^0.4.9",
     "react-native-calendars": "1.1262.0",
     "react-native-cli": "^2.0.1",
     "react-native-contacts": "^7.0.0",
@@ -46,13 +51,16 @@
     "react-native-emoji-selector": "^0.2.0",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-intl": "^1.0.0",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-tab-view": "2.16.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
