--- a/app.json
+++ b/app.json
@@ -30,6 +30,7 @@
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
-    }
+    },
+    "plugins": ["@config-plugins/android-jsc-intl"]
   }
 }
