--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@config-plugins/android-jsc-intl": "^0.0.0",
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.11",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "~5.8.10",
@@ -26,6 +29,7 @@
     "expo-camera": "~11.0.2",
     "expo-constants": "~10.1.3",
     "expo-contacts": "~9.1.2",
+    "expo-dev-client": "^0.6.0",
     "expo-firebase-recaptcha": "^1.4.2",
     "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.4",
@@ -37,11 +41,13 @@
     "expo-web-browser": "~9.1.0",
     "firebase": "8.2.3",
     "glob": "^7.2.0",
+    "intl": "^1.2.5",
     "luxon": "^2.0.2",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-firebase-hooks": "^3.0.4",
+    "react-intl": "^5.20.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-actions-sheet": "^0.4.9",
     "react-native-calendars": "1.1262.0",
@@ -59,8 +65,11 @@
     "react-native-tab-view": "2.16.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.2.3",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "react-redux-firebase": "^3.10.0",
+    "redux": "^4.1.1",
+    "redux-firestore": "^0.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
