--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
+    "caniuse-lite": "^1.0.30001280",
     "expo": "~41.0.1",
     "expo-asset": "~8.3.1",
     "expo-camera": "~11.0.2",
@@ -50,7 +51,7 @@
     "react-intl": "^5.20.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-actions-sheet": "^0.4.9",
-    "react-native-calendars": "1.1262.0",
+    "react-native-calendars": "^1.1262.0",
     "react-native-cli": "^2.0.1",
     "react-native-contacts": "^7.0.0",
     "react-native-elements": "^3.4.1",
@@ -68,6 +69,7 @@
     "react-native-webview": "11.2.3",
     "react-redux": "^7.2.5",
     "react-redux-firebase": "^3.10.0",
+    "react-simple-timefield": "^3.2.5",
     "redux": "^4.1.1",
     "redux-firestore": "^0.15.0"
   },
